--- a/templates/editors/tbl.html
+++ b/templates/editors/tbl.html
@@ -148,6 +148,10 @@
             height: calc(100vh - 400px);
             width: calc(100vw - 30px);
         }
+        
+        #select_end {
+            vertical-align: middle;
+        }
     </style>
 </head>
 
@@ -205,8 +209,7 @@
     const a_code = "A".charCodeAt(0);
     const user_credentials = "{{user_credentials}}";
     const file_data = new DOMParser().parseFromString("{{file_data}}", "text/html").body.firstChild.textContent;
-    const file_path = "[[file_path]]";
-    const update_path = "[[update_path]]";
+    const file_path = new DOMParser().parseFromString("{{file_path}}", "text/html").body.firstChild.textContent;
     const ballot_box = "&#9744;";
     const ballot_box_checked = "&#9745;";
 
@@ -451,7 +454,7 @@
     }
     
     async function save() {
-        let res = await fetch(update_path, {
+        let res = await fetch(location.origin + "/update_file", {
             headers: {credentials: user_credentials, path: file_path},
             method: "POST",
             body: JSON.stringify(table_data),
