fixed data upload error

--- a/templates/tabs/data.html
+++ b/templates/tabs/data.html
@@ -458,7 +458,7 @@
             else
                 reload_cur_directory();
         };
-        reader.readAsBinaryString(file_input);
+        reader.readAsArrayBuffer(file_input);
     }
 
     async function create_folder() {
