fixed data sorting bug

--- a/templates/tabs/data.html
+++ b/templates/tabs/data.html
@@ -374,11 +374,11 @@
             list.removeChild(node);
         }
         files_json.elements.sort((a, b) => {
-            if (a.size == 0)
+            if (a.size == 0 && b.size != 0)
                 return -1;
-            if (b.size == 0)
+            if (b.size == 0 && a.size != 0)
                 return 1;
-            return a.name < b.name;
+            return a.name > b.name;
         });
         for (let element of files_json.elements) {
             list.innerHTML += "<div class='le_div'><input type='checkbox' class='file_checkbox' file='" + element.full_path + "'/></div>";
